--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ html {
 
 body {
   font-family: "Roboto", sans-serif;
+  margin-bottom: 100px;
 }
 
 main {
@@ -34,7 +35,7 @@ main {
   margin-top: 50px;
 }
 
-.container {
+.calculator {
   width: 400px;
   border: 2px solid var(--primary-dark);
   border-radius: 15px;
@@ -45,30 +46,59 @@ main {
   background-color: #aaa;
 }
 
-.screen {
-  padding: 10px 20px;
+.display {
+  padding: 60px 20px;
   border: 2px solid var(--primary-dark);
   border-radius: 5px;
+  background-color: #fefefe;
 }
 
 .buttons_container {
-  padding: 10px;
   display: flex;
-  gap: 10px;
   flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
 }
 
-.clear,
-.delete {
-  flex-grow: 5;
+button {
+  cursor: pointer;
 }
 
 .button {
+  flex: 1 0 calc(10% - 10px);
   padding: 20px;
   border: 2px solid var(--primary-dark);
   border-radius: 5px;
   background-color: #fefefe;
   font-size: 20px;
+}
+
+.clear,
+.delete {
+  padding: 20px 0;
+  font-size: 20px;
+  flex: 1 0 calc(50% - 10px);
+}
+
+.clear {
+  background-color: rgba(245, 47, 25, 0.5);
+}
+
+.delete {
+  background-color: rgba(25, 95, 245, 0.5);
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  width: 100%;
+  font-size: 20px;
+  padding-bottom: 10px;
 }
 
 .fa-github {
