--- a/style.css
+++ b/style.css
@@ -46,7 +46,9 @@ main {
   background-color: #aaa;
 }
 
-.display {
+#display {
+  text-align: right;
+  font-size: 30px;
   padding: 60px 20px;
   border: 2px solid var(--primary-dark);
   border-radius: 5px;
