--- a/style.css
+++ b/style.css
@@ -46,13 +46,23 @@ main {
   background-color: #aaa;
 }
 
-#display {
+.display {
   text-align: right;
   font-size: 30px;
-  padding: 60px 20px;
+  padding: 10px 20px;
   border: 2px solid var(--primary-dark);
   border-radius: 5px;
   background-color: #fefefe;
+}
+
+.display-last {
+  min-height: 32px;
+  font-size: 20px;
+}
+
+.display-current {
+  min-height: 64px;
+  font-size: 40px;
 }
 
 .buttons_container {
