--- a/style.css
+++ b/style.css
@@ -100,6 +100,14 @@ button {
   background-color: rgba(25, 95, 245, 0.5);
 }
 
+/* .operator {
+  background-color: rgba(5, 5, 5, 0.1);
+} */
+
+.operator.active {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
 .footer {
   position: absolute;
   bottom: 0;
